[fix] iframe overflow on viewing entries

--- a/app/View/Themed/Default/webroot/css/src/base/_view.scss
+++ b/app/View/Themed/Default/webroot/css/src/base/_view.scss
@@ -10,7 +10,7 @@
 }
 
 .posting {
-    img, object, embed, video {
+    img, object, embed, video, iframe {
         max-width: 100%;
     }
     .signature {
